--- a/src/features/goals/GoalAccountsItem.module.css
+++ b/src/features/goals/GoalAccountsItem.module.css
@@ -1,5 +1,5 @@
 .card {
-  background-color: #fff;
+  background-color: var(--color-light--5);
   margin-bottom: 1rem;
   padding: 1.8rem 2.4rem;
   border-radius: 9px;
