--- a/src/features/goals/GoalAccountsList.module.css
+++ b/src/features/goals/GoalAccountsList.module.css
@@ -1,12 +1,6 @@
-.goalList {
+.list {
   list-style: none;
-  /* padding: 0;
-      margin: 0; */
   display: flex;
   flex-direction: column;
-}
-
-.box {
-  overflow-y: scroll;
-  height: 50vh;
+  overflow-y: auto;
 }
