--- a/src/features/goals/GoalAccountsSearchForm.module.css
+++ b/src/features/goals/GoalAccountsSearchForm.module.css
@@ -5,7 +5,6 @@
   background: white;
   padding: 1.2rem;
   border-radius: 9px;
-  margin-bottom: 2.4rem;
 }
 
 .input {
